--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven{
+            url "http://maven.bridgefy.com/artifactory/libs-release-local"
+            artifactUrls=["http://jcenter.bintray.com/"]
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
-        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +22,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url "http://maven.bridgefy.com/artifactory/libs-release-local"
+            artifactUrls=["http://jcenter.bintray.com/"]
+        }
     }
 }
 
